[package]
name = "lnf"
version = "0.1.0"
authors = ["Scott Munro <scottnmunro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pancurses = "0.17"
snm_rand_utils = { git = "https://github.com/scottnm/snm_rand_utils", branch = "main" }
